fix input field width on Mobile

--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -123,6 +123,10 @@
     }
   }
 
+  #username {
+    width: 70vw !important;
+  }
+
   #root-btn {
     position: initial !important;
     margin: 0 !important;
